middle_fix