@@ -7,15 +7,24 @@ import com.restapi.emp.exception.ResourceNotFoundException;
 import com.restapi.emp.repository.DepartmentRepository;
 import com.restapi.emp.service.DepartmentService;
 import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Optional;
 
 @Service
-@AllArgsConstructor
+@Transactional
+@RequiredArgsConstructor
 public class DepartmentServiceImpl implements DepartmentService {
+    private final DepartmentRepository departmentRepository;
 
-    private DepartmentRepository departmentRepository;
+    //Constructor Injection
+//    public DepartmentServiceImpl(DepartmentRepository departmentRepository) {
+//        this.departmentRepository = departmentRepository;
+//    }
 
     @Override
     public DepartmentDto createDepartment(DepartmentDto departmentDto) {
@@ -24,23 +33,32 @@ public class DepartmentServiceImpl implements DepartmentService {
         return DepartmentMapper.mapToDepartmentDto(savedDepartment);
     }
 
+    @Transactional(readOnly = true)
     @Override
     public DepartmentDto getDepartmentById(Long departmentId) {
+//        Optional<Department> optional = departmentRepository.findById(departmentId);
+//        Department department = optional.orElseThrow(
+//                () -> new ResourceNotFoundException("Department is not exists with a given id: " + departmentId) );
+
+        String errMsg = String.format("Department is not exists with a given id: %s", departmentId);
         Department department = departmentRepository.findById(departmentId)
                 .orElseThrow(() ->
-                        new ResourceNotFoundException("Department is not exists with a given id: " + departmentId)
-        );
+                        new ResourceNotFoundException(errMsg, HttpStatus.NOT_FOUND)
+                );
         return DepartmentMapper.mapToDepartmentDto(department);
     }
 
+    @Transactional(readOnly = true)
     @Override
     public List<DepartmentDto> getAllDepartments() {
+        // List<Department> ==> List<DepartmentDto>
         List<Department> departments = departmentRepository.findAll();
-        return departments.stream()
+        return departments
+                .stream()
                 .map(DepartmentMapper::mapToDepartmentDto)
-                .toList();
-                //.map((department) -> DepartmentMapper.mapToDepartmentDto(department))
-                //.collect(Collectors.toList());
+                .toList(); //Stream<DepartmentDto> => List<DepartmentDto>
+        //.map((department) -> DepartmentMapper.mapToDepartmentDto(department))
+        //.collect(Collectors.toList());
     }
 
     @Override
@@ -48,14 +66,14 @@ public class DepartmentServiceImpl implements DepartmentService {
         Department department = departmentRepository.findById(departmentId)
                 .orElseThrow(() ->
                         new ResourceNotFoundException("Department is not exists with a given id:"+ departmentId)
-        );
-
+                );
+        //Dirty Check - setter method 호출
         department.setDepartmentName(updatedDepartment.getDepartmentName());
         department.setDepartmentDescription(updatedDepartment.getDepartmentDescription());
 
-        Department savedDepartment = departmentRepository.save(department);
+        //Department savedDepartment = departmentRepository.save(department);
 
-        return DepartmentMapper.mapToDepartmentDto(savedDepartment);
+        return DepartmentMapper.mapToDepartmentDto(department);
     }
 
     @Override
@@ -63,7 +81,7 @@ public class DepartmentServiceImpl implements DepartmentService {
         departmentRepository.findById(departmentId)
                 .orElseThrow(() ->
                         new ResourceNotFoundException("Department is not exists with a given id: " + departmentId)
-        );
+                );
 
         departmentRepository.deleteById(departmentId);
     }
